--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["php81", "composer"]
+nixPkgs = ['php81', 'composer', 'nodejs-18_x', 'php81Extensions.zip', 'php81Extensions.fileinfo', 'php81Extensions.mbstring']
 
-[phases.build]
-cmd = "composer install"
+[phases.install]
+cmds = [
+  'composer install --no-dev --optimize-autoloader',
+  'npm install'
+]
 
 [start]
-cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = 'npm run dev'
