--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,11 +1,26 @@
 [phases.setup]
-nixPkgs = ['php81', 'composer', 'nodejs-18_x', 'php81Extensions.zip', 'php81Extensions.fileinfo', 'php81Extensions.mbstring']
+nixPkgs = [
+  "php81",
+  "composer",
+  "nodejs-18_x",
+  "php81Extensions.zip",
+  "php81Extensions.fileinfo",
+  "php81Extensions.mbstring",
+  "php81Extensions.pdo_mysql" # tambahin ini kalo kamu pake MySQL
+]
 
 [phases.install]
 cmds = [
-  'composer install --no-dev --optimize-autoloader',
-  'npm install'
+  "composer install --no-dev --optimize-autoloader",
+  "npm install && npm run build"
 ]
 
-[start]
-cmd = 'npm run dev'
+[phases.build]
+cmds = [
+  "php artisan config:cache",
+  "php artisan route:cache",
+  "php artisan view:cache"
+]
+
+[phases.start]
+cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
