--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -6,7 +6,7 @@ nixPkgs = [
   "php81Extensions.zip",
   "php81Extensions.fileinfo",
   "php81Extensions.mbstring",
-  "php81Extensions.pdo_mysql" # tambahin ini kalo kamu pake MySQL
+  "php81Extensions.pdo_mysql"
 ]
 
 [phases.install]
@@ -17,10 +17,11 @@ cmds = [
 
 [phases.build]
 cmds = [
+  "php artisan key:generate",
   "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache"
 ]
 
-[phases.start]
+[start]
 cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
